Text: упрощен builder